--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,13 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mypy-extensions==0.4.3
+numpy==1.23.3
 pathspec==0.10.1
+Pillow==9.2.0
 platformdirs==2.5.2
 pycparser==2.21
 PyJWT==2.4.0
+qrcode==7.3.1
 six==1.16.0
 SQLAlchemy==1.4.41
 tomli==2.0.1
