--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,25 +1,55 @@
 black==22.8.0
+CacheControl==0.14.0
+cachetools==5.3.3
+certifi==2024.2.2
 cffi==1.15.1
+charset-normalizer==3.3.2
 click==8.1.3
 cryptography==38.0.1
+firebase-admin==6.4.0
 Flask==2.2.2
 Flask-Cors==3.0.10
+google-api-core==2.17.1
+google-api-python-client==2.121.0
+google-auth==2.28.2
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.15.0
+google-cloud-storage==2.15.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.62.0
 greenlet==1.1.3
+grpcio==1.62.1
+grpcio-status==1.62.1
+httplib2==0.22.0
+idna==3.6
 importlib-metadata==4.12.0
+isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+msgpack==1.0.8
 mypy-extensions==0.4.3
 numpy==1.23.3
 pathspec==0.10.1
 Pillow==9.2.0
 platformdirs==2.5.2
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pycparser==2.21
-PyJWT==2.4.0
+PyJWT==2.8.0
+pyparsing==3.1.2
 qrcode==7.3.1
+requests==2.31.0
+rsa==4.9
 six==1.16.0
 SQLAlchemy==1.4.41
 tomli==2.0.1
 typing_extensions==4.3.0
+uritemplate==4.1.1
+urllib3==2.2.1
 Werkzeug==2.2.2
 zipp==3.8.1
