--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,6 +3,7 @@ CacheControl==0.14.0
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.15.1
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.3
 cryptography==38.0.1
@@ -43,6 +44,7 @@ pycparser==2.21
 PyJWT==2.8.0
 pyparsing==3.1.2
 qrcode==7.3.1
+reportlab==4.1.0
 requests==2.31.0
 rsa==4.9
 six==1.16.0
