--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,4 +1,5 @@
-black==22.8.0
+alembic==1.13.1
+black==24.2.0
 CacheControl==0.14.0
 cachetools==5.3.3
 certifi==2024.2.2
@@ -29,10 +30,12 @@ importlib-metadata==4.12.0
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.3.2
 MarkupSafe==2.1.1
 msgpack==1.0.8
 mypy-extensions==0.4.3
 numpy==1.23.3
+packaging==24.0
 pathspec==0.10.1
 Pillow==9.2.0
 platformdirs==2.5.2
