--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -7,10 +7,13 @@ cffi==1.15.1
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.3
+coverage==7.4.4
 cryptography==38.0.1
+exceptiongroup==1.2.0
 firebase-admin==6.4.0
 Flask==2.2.2
 Flask-Cors==3.0.10
+Flask-Testing==0.8.1
 google-api-core==2.17.1
 google-api-python-client==2.121.0
 google-auth==2.28.2
@@ -27,6 +30,7 @@ grpcio-status==1.62.1
 httplib2==0.22.0
 idna==3.6
 importlib-metadata==4.12.0
+iniconfig==2.0.0
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -39,6 +43,7 @@ packaging==24.0
 pathspec==0.10.1
 Pillow==9.2.0
 platformdirs==2.5.2
+pluggy==1.4.0
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.5.1
@@ -46,6 +51,8 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.8.0
 pyparsing==3.1.2
+pytest==8.1.1
+pytest-cov==4.1.0
 qrcode==7.3.1
 reportlab==4.1.0
 requests==2.31.0
