--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.13.1
+astroid==3.1.0
 black==24.2.0
 CacheControl==0.14.0
 cachetools==5.3.3
@@ -9,6 +10,7 @@ charset-normalizer==3.3.2
 click==8.1.3
 coverage==7.4.4
 cryptography==38.0.1
+dill==0.3.8
 exceptiongroup==1.2.0
 firebase-admin==6.4.0
 Flask==2.2.2
@@ -36,6 +38,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.3.2
 MarkupSafe==2.1.1
+mccabe==0.7.0
 msgpack==1.0.8
 mypy-extensions==0.4.3
 numpy==1.23.3
@@ -50,6 +53,7 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.8.0
+pylint==3.1.0
 pyparsing==3.1.2
 pytest==8.1.1
 pytest-cov==4.1.0
@@ -60,6 +64,7 @@ rsa==4.9
 six==1.16.0
 SQLAlchemy==1.4.41
 tomli==2.0.1
+tomlkit==0.12.4
 typing_extensions==4.3.0
 uritemplate==4.1.1
 urllib3==2.2.1
